[tool.poetry]
name = "assetverse"
version = "0.1.0"
description = ""
authors = ["koswu <koswu@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
fake-bpy-module = "^20240516"


[tool.poetry.group.release-testing.dependencies]
bpy = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
